<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PiRover</string>
    <string name="action_main">Controller</string>
    <string name="action_playback">Playback</string>
    <string name="action_settings">Settings</string>
    <string name="action_browse">Browse</string>
    <string name="action_connect">Connect</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>
    <string name="camera">Camera</string>
    <string name="camera_state_disconnected">Not connected</string>
    <string name="camera_state_connected">Connected</string>
    <string name="camera_state_unable_to_connect">Unable to connect</string>
    <string name="camera_state_connecting">Connecting&#8230;</string>
    <string name="camera_fps_count">%d fps</string>
    <string name="camera_fps_count_default">0 fps</string>
    <string name="camera_bandwidth">%d bytes/s</string>
    <string name="camera_bandwidth_default">0 bytes/s</string>
    <string name="camera_record_button">R</string>
    <string name="broadcast_loading_title">Loading</string>
    <string name="broadcast_loading_text">Detecting PiRover&#8230;</string>
    <string name="broadcast_timeout_title">Unable to detect PiRover</string>
    <string name="broadcast_timeout_message">Manual IP address entry</string>
    <string name="broadcast_disconnected_title">Connection error</string>
    <string name="broadcast_disconnected_message">Device is not on a wifi network</string>
    <string name="broadcast_rescan">Scan again</string>
    <string name="controller_accelerator">Accelerator</string>
    <string name="controller_steering_wheel">Steering Wheel</string>
    <string name="playback_loading_title">Loading</string>
    <string name="playback_loading_text">Buffering video</string>
    
    <string name="pref_connection_title">Connection</string>
    <string name="pref_autoconnect_key">auto_connect</string>
    <string name="pref_autoconnect_title">Auto connect</string>
    <string name="pref_autoconnect_default">true</string>
    <string name="pref_autoconnect_summary">Auto connect when the app starts</string>
    <string name="pref_control_title">Controller</string>
    <string name="pref_gyroscope_key">gyroscope</string>
    <string name="pref_gyroscope_title">Gyroscope</string>
    <string name="pref_gyroscope_default">false</string>
    <string name="pref_gyroscope_summary">Enables gyroscope controls</string>

</resources>
